--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^4.2.11",
     "@mantine/next": "^4.2.11",
     "@react-spring/parallax": "^9.4.5",
+    "framer-motion": "^7.6.6",
     "next": "12.1.6",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
