--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,9 @@
   "extends": ["next/core-web-vitals", "mantine", "plugin:react/jsx-runtime"],
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    "quotes": "off",
+    "@typescript-eslint/quotes": "off"
   }
 }
